--- a/Agent_Oriented_Enablement_Tool.ipynb
+++ b/Agent_Oriented_Enablement_Tool.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPq1fWSeRi3xaCqDxDpPis0",
+      "authorship_tag": "ABX9TyM0pAOGBNuaNugoW20Dm9Qy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -171,8 +171,6 @@
       "cell_type": "code",
       "source": [
         "# Configure your OpenAI API key\n",
-        "#openai.api_key = os.getenv(\"OPENAI_GENAI_2\")\n",
-        "#os.environ[\"OPENAI_GENAI_2\"] = \"OPENAI_GENAI_2\"\n",
         "\n",
         "from google.colab import userdata\n",
         "\n",
@@ -234,12 +232,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 680
+          "height": 715
         },
         "id": "6kIC_KNGD4W-",
         "outputId": "36d8a617-dee9-4851-d1fa-8a389bdff296"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -272,6 +270,22 @@
             ]
           },
           "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Keyboard interruption in main thread... closing server.\n",
+            "Killing tunnel 127.0.0.1:7860 <> https://0528a7fe62d7fce117.gradio.live\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {},
+          "execution_count": 10
         }
       ]
     }
